gadjid/src/snapshots/gadjid__test__big-CPDAG5-vs-CPDAG6.snap
---
source: src/lib.rs
expression: "test(&format!(\"100{:0>2}.CPDAG-100\", true_id),\n    &format!(\"100{:0>2}.CPDAG-100\", guess_id))"
---
g_true: 10005.CPDAG-100
g_guess: 10006.CPDAG-100
ancestor_aid:
  - 0.02494949494949495
  - 247
oset_aid:
  - 0.02666666666666667
  - 264
parent_aid:
  - 0.04181818181818182
  - 414
shd:
  - 0.006262626262626263
  - 31
T:
  - 0
  - 1
  - 4
  - 5
  - 8
  - 12
  - 21
  - 23
  - 28
  - 29
  - 31
  - 33
  - 42
  - 43
  - 45
  - 46
  - 48
  - 50
  - 51
  - 55
  - 61
  - 62
  - 63
  - 64
  - 65
  - 67
  - 69
  - 71
  - 72
  - 74
  - 76
  - 77
  - 80
  - 84
  - 87
  - 88
  - 89
  - 92
  - 95
  - 98
NAM:
  - 2
  - 3
  - 7
  - 9
  - 11
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 22
  - 24
  - 25
  - 26
  - 27
  - 30
  - 32
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 44
  - 47
  - 49
  - 52
  - 53
  - 54
  - 56
  - 57
  - 58
  - 59
  - 60
  - 66
  - 68
  - 70
  - 73
  - 75
  - 78
  - 79
  - 81
  - 82
  - 83
  - 85
  - 86
  - 90
  - 91
  - 93
  - 94
  - 96
  - 97
  - 99
Y: 38
random_adj:
  - 2
  - 3
  - 6
  - 7
  - 9
  - 10
  - 11
  - 13
  - 14
  - 16
  - 17
  - 18
  - 19
  - 20
  - 22
  - 25
  - 26
  - 27
  - 30
  - 32
  - 34
  - 35
  - 37
  - 39
  - 40
  - 47
  - 49
  - 52
  - 53
  - 54
  - 56
  - 58
  - 59
  - 60
  - 66
  - 68
  - 70
  - 73
  - 78
  - 79
  - 81
  - 82
  - 83
  - 85
  - 90
  - 94
  - 96
  - 97
  - 99
proper_ancestors:
  - 2
  - 3
  - 6
  - 7
  - 9
  - 10
  - 11
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 24
  - 25
  - 30
  - 35
  - 37
  - 38
oset:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 13
  - 23
possible_descendants:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 7
  - 8
  - 9
  - 11
  - 12
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
parent_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 90
  - 91
  - 93
  - 94
  - 96
  - 97
  - 99
ancestor_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 90
  - 91
  - 93
  - 94
  - 96
  - 97
  - 99
nondescendant_adjustment_NVA:
  - 2
  - 3
  - 6
  - 7
  - 9
  - 10
  - 11
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 22
  - 24
  - 25
  - 26
  - 27
  - 30
  - 32
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 44
  - 47
  - 49
  - 52
  - 53
  - 54
  - 56
  - 57
  - 58
  - 59
  - 60
  - 66
  - 68
  - 70
  - 73
  - 75
  - 78
  - 79
  - 81
  - 82
  - 83
  - 85
  - 86
  - 90
  - 91
  - 93
  - 94
  - 96
  - 97
  - 99
oset_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 30
  - 32
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 44
  - 47
  - 49
  - 52
  - 53
  - 54
  - 56
  - 57
  - 58
  - 59
  - 60
  - 66
  - 68
  - 70
  - 73
  - 75
  - 78
  - 79
  - 81
  - 82
  - 83
  - 85
  - 86
  - 90
  - 91
  - 93
  - 94
  - 96
  - 97
  - 99
empty_adjustment_NVA:
  - 2
  - 3
  - 6
  - 7
  - 9
  - 10
  - 11
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 22
  - 24
  - 25
  - 26
  - 27
  - 30
  - 32
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 44
  - 47
  - 49
  - 52
  - 53
  - 54
  - 56
  - 57
  - 58
  - 59
  - 60
  - 66
  - 68
  - 70
  - 73
  - 75
  - 78
  - 79
  - 81
  - 82
  - 83
  - 85
  - 86
  - 90
  - 91
  - 93
  - 94
  - 96
  - 97
  - 99
random_Z_adjustment_NVA:
  - 2
  - 3
  - 6
  - 7
  - 9
  - 10
  - 11
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 22
  - 24
  - 25
  - 26
  - 27
  - 30
  - 32
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 44
  - 47
  - 49
  - 52
  - 53
  - 54
  - 56
  - 57
  - 58
  - 59
  - 60
  - 66
  - 68
  - 70
  - 73
  - 75
  - 78
  - 79
  - 81
  - 82
  - 83
  - 85
  - 86
  - 90
  - 91
  - 93
  - 94
  - 96
  - 97
  - 99
