gadjid/src/snapshots/gadjid__test__big-CPDAG6-vs-CPDAG7.snap
---
source: src/lib.rs
expression: "test(&format!(\"100{:0>2}.CPDAG-100\", true_id),\n    &format!(\"100{:0>2}.CPDAG-100\", guess_id))"
---
g_true: 10006.CPDAG-100
g_guess: 10007.CPDAG-100
ancestor_aid:
  - 0.1494949494949495
  - 1480
oset_aid:
  - 0.22121212121212122
  - 2190
parent_aid:
  - 0.6617171717171717
  - 6551
shd:
  - 0.4983838383838384
  - 2467
T:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 7
  - 8
  - 9
  - 10
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 45
  - 46
  - 47
  - 48
  - 50
  - 52
  - 53
  - 54
  - 55
  - 56
  - 58
  - 59
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 87
  - 88
  - 89
  - 90
  - 92
  - 93
  - 94
  - 95
  - 97
  - 98
  - 99
NAM:
  - 4
  - 6
  - 11
  - 25
  - 44
  - 51
  - 57
  - 60
  - 73
  - 86
  - 91
  - 96
Y: 4
random_adj:
  - 11
  - 44
  - 49
  - 51
  - 57
  - 60
  - 91
  - 96
proper_ancestors:
  - 4
oset: []
possible_descendants:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
parent_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 95
  - 96
  - 97
ancestor_adjustment_NVA:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 95
  - 96
  - 97
nondescendant_adjustment_NVA:
  - 4
  - 6
  - 11
  - 25
  - 36
  - 44
  - 49
  - 51
  - 57
  - 60
  - 73
  - 86
  - 91
  - 96
oset_adjustment_NVA:
  - 4
  - 6
  - 11
  - 25
  - 36
  - 44
  - 49
  - 51
  - 57
  - 60
  - 73
  - 86
  - 91
  - 96
empty_adjustment_NVA:
  - 4
  - 6
  - 11
  - 25
  - 36
  - 44
  - 49
  - 51
  - 57
  - 60
  - 73
  - 86
  - 91
  - 96
random_Z_adjustment_NVA:
  - 4
  - 6
  - 11
  - 25
  - 36
  - 44
  - 49
  - 51
  - 57
  - 60
  - 73
  - 86
  - 91
  - 96
